# zeta

./: .gitignore  Cargo.toml  README.md  SPECIFICATION.md  demo_encrypted.zeta  demo_full.zeta  demo_gzip.zeta  demo_indexed.zeta  demo_lz4.zeta  demo_multi.zeta  demo_none.zeta  demo_read.zeta  demo_zstd.zeta  generate_keys.py  hello.txt  pyproject.toml  test.zeta
.github/: dependabot.yml
benches/: zeta_bench.rs
examples/: file_io_demo.rs
keys/: aes256_gcm.key  ed25519_private.pem  ed25519_private.raw  ed25519_public.pem  ed25519_public.raw
output/: test.txt
src/: constants.rs  error.rs  lib.rs  types.rs
src/cli/: list.rs  mod.rs  pack.rs  unpack.rs  verify.rs
src/format/: chunk.rs  footer.rs  header.rs  index.rs  mod.rs  stream_dir.rs  tlv.rs
src/pipeline/: decoder.rs  encoder.rs  indexed.rs  mod.rs  streaming.rs
src/python/: mod.rs  reader.rs  writer.rs
src/reader/: indexed.rs  mod.rs  streaming.rs  verifier.rs
src/registry/: compression.rs  delta.rs  encryption.rs  hash.rs  kdf.rs  mod.rs  signature.rs
src/writer/: builder.rs  mod.rs  stream.rs
tests/: basic_tests.rs
